--- a/deps.yaml
+++ b/deps.yaml
@@ -82,7 +82,7 @@
   Version: 1.3-6
 - Package: rworldxtra
   Repository: CRAN
-  Version: 1.01
+  Version: '1.01'
 - Package: tidyverse
   Repository: CRAN
   Version: 1.2.1
